# matrix

./: .gitignore  Cargo.toml  Makefile  README.md
ex/: Cargo.toml
ex/src/: ex00.rs  ex01.rs  ex02.rs  ex03.rs  ex04.rs  ex05.rs  ex06.rs  ex07.rs  help.rs  test.rs
ft_math/: Cargo.toml
ft_math/src/: ex02.rs  lib.rs
ft_math/src/matrix/: ex00.rs  ex01.rs  ex07.rs  mod.rs
ft_math/src/vector/: ex00.rs  ex01.rs  ex03.rs  ex04.rs  ex05.rs  ex06.rs  mod.rs
